WIP fixed small TODOs and rewrote chopped state tracking